@@ -305,7 +305,7 @@ static BOOL XGInitAtoms(Display *dpy)
   descender = -(font_info->descent);
   fontBBox = NSMakeRect(
     (float)(font_info->min_bounds.lbearing),
-    (float)(font_info->max_bounds.descent),
+    (float)(-font_info->max_bounds.descent),
     (float)(font_info->max_bounds.rbearing - font_info->min_bounds.lbearing),
     (float)(font_info->max_bounds.ascent + font_info->max_bounds.descent));
   maximumAdvancement = NSMakeSize(font_info->max_bounds.width, 0.0);
